--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serial-socket-temp",
+  "name": "tesco_lens",
   "version": "0.0.1",
   "description": "serial to websockets",
   "dependencies": {
